--- a/ImageClassification/Swin-Transformer.ipynb
+++ b/ImageClassification/Swin-Transformer.ipynb
@@ -14,7 +14,7 @@
     "<h3>Objective for this Notebook</h3>    \n",
     "<h5> 1. 了解Swin-Transformer模型的架構</h5>\n",
     "<h5> 2. 了解不同的功能是如何以程式碼實現</h5>\n",
-    "<h5> 3. 能夠將該模型應用到不同的任務</h5>   \n"
+    "<h5> 3. 讓模型訓練以完成圖像分類的任務</h5>   \n"
    ]
   },
   {
@@ -24,7 +24,8 @@
     "\n",
     "# Table of Contents\n",
     "<li><a href=\"#ref0\">Swin-Transformer模型架構</a></li>\n",
-    "<li><a href=\"#ref1\"><span style=\"color: lightgreen;\">圖像分類</span></a></li>\n",
+    "<li><a href=\"#ref1\">圖像分類</a></li>\n",
+    "<li><a href=\"#ref2\">載入預訓練權重(補充)</a></li>\n",
     "\n",
     "\n",
     "<hr>\n"
@@ -35,7 +36,7 @@
    "metadata": {},
    "source": [
     "<a id=\"ref0\"></a>\n",
-    "<h2 align=center>Swin-Transformer模型架構  </h2>\n"
+    "# <h2 align=center>Swin-Transformer模型架構  </h2>\n"
    ]
   },
   {
@@ -48,6 +49,10 @@
    "metadata": {},
    "source": [
     "Swin-Transformer的一個Block由多個功能組成，包含了對於資料的細節處理，例如:Window-partition、Patch-Merging等，以及窗口多頭注意力計算(W-MSA)和移動窗口多頭注意力計算(SW-MSA)，還有最後的輸出MLP。基礎的Swin-Transformer是設計來處理圖像分類任務，而只要經過修改，Swin-Transformer也可以處理其他的下游任務。\n",
+    "\n",
+    "Source code： https://github.com/microsoft/Swin-Transformer\n",
+    "\n",
+    "paper： https://arxiv.org/abs/2103.14030\n",
     "\n",
     "<h3>主要由這些組成</h3>\n",
     "<li><a href=\"#ref5\">WindowAttention</a></li>\n",
@@ -98,7 +103,7 @@
    "metadata": {},
    "source": [
     "<a id=\"ref5\"></a>\n",
-    "<h3 align=center>WindowAttention  </h3>\n"
+    "# <h3 align=center>WindowAttention  </h3>\n"
    ]
   },
   {
@@ -230,7 +235,7 @@
    "metadata": {},
    "source": [
     "<a id=\"ref6\"></a>\n",
-    "<h3 align=center>Mlp  </h3>\n"
+    "# <h3 align=center>Mlp  </h3>\n"
    ]
   },
   {
@@ -254,7 +259,7 @@
     "\n",
     "**`x`**：輸入張量，形狀為 `(B, C)`。\n",
     "\n",
-    "### 返回值\n",
+    "返回值\n",
     "\n",
     "**`x`**：張量，形狀為`(B, C)`。"
    ]
@@ -294,7 +299,7 @@
    "metadata": {},
    "source": [
     "<a id=\"ref7\"></a>\n",
-    "<h3 align=center>window_partition  </h3>\n"
+    "# <h3 align=center>window_partition  </h3>\n"
    ]
   },
   {
@@ -345,7 +350,7 @@
    "metadata": {},
    "source": [
     "<a id=\"ref8\"></a>\n",
-    "<h3 align=center>window_reverse  </h3>\n"
+    "# <h3 align=center>window_reverse  </h3>\n"
    ]
   },
   {
@@ -389,7 +394,7 @@
    "metadata": {},
    "source": [
     "<a id=\"ref9\"></a>\n",
-    "<h3 align=center>SwinTransformerBlock  </h3>\n"
+    "# <h3 align=center>SwinTransformerBlock  </h3>\n"
    ]
   },
   {
@@ -566,7 +571,7 @@
    "metadata": {},
    "source": [
     "<a id=\"ref10\"></a>\n",
-    "<h3 align=center>PatchMerging   </h3>\n"
+    "# <h3 align=center>PatchMerging   </h3>\n"
    ]
   },
   {
@@ -664,7 +669,7 @@
    "metadata": {},
    "source": [
     "<a id=\"ref11\"></a>\n",
-    "<h3 align=center>PatchEmbed    </h3>\n"
+    "# <h3 align=center>PatchEmbed    </h3>\n"
    ]
   },
   {
@@ -744,7 +749,7 @@
    "metadata": {},
    "source": [
     "<a id=\"ref12\"></a>\n",
-    "<h3 align=center>BasicLayer    </h3>\n"
+    "# <h3 align=center>BasicLayer    </h3>\n"
    ]
   },
   {
@@ -845,7 +850,7 @@
    "metadata": {},
    "source": [
     "<a id=\"ref13\"></a>\n",
-    "<h3 align=center>SwinTransformer    </h3>\n"
+    "# <h3 align=center>SwinTransformer    </h3>\n"
    ]
   },
   {
@@ -1011,7 +1016,14 @@
    "metadata": {},
    "source": [
     "<a id=\"ref1\"></a>\n",
-    "<h2 align=center>圖像分類  </h2>\n"
+    "# <h2 align=center>圖像分類  </h2>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "確認CUDA正常執行"
    ]
   },
   {
@@ -1034,12 +1046,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "創建模型(輸出類別數改成與CIFA10相同)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = SwinTransformer(num_classes=10).to(device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "圖像預處理"
    ]
   },
   {
@@ -1057,6 +1083,13 @@
     "        transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225]),\n",
     "    ]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "準備資料集"
    ]
   },
   {
@@ -1084,6 +1117,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "分割資料集(訓練、驗證、測試)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
@@ -1099,6 +1139,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "創建DataLoader實例"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
@@ -1110,6 +1157,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "設定Loss function 以及 optimizer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
@@ -1117,6 +1171,13 @@
    "source": [
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=1e-4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "建立Trainer類別(包含訓練、驗證、測試、圖形展示的函式)"
    ]
   },
   {
@@ -1269,6 +1330,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "創建Trainer實例"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
@@ -1285,6 +1353,13 @@
     "    epochs=10,  # Adjusted epochs to see the trends better\n",
     "    device=device,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "開始訓練"
    ]
   },
   {
@@ -1586,6 +1661,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "展示訓練與驗證時的Loss、Accuracy變化曲線 "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -1603,6 +1685,13 @@
    ],
    "source": [
     "trainer.plot_graphs()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "開始測試"
    ]
   },
   {
@@ -1637,6 +1726,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"ref2\"></a>\n",
+    "# <h2 align=center>載入預訓練權重  </h2>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 70,
    "metadata": {},
@@ -1668,6 +1765,7 @@
     "elif \"state_dict\" in pre_trained_weights:\n",
     "    pre_trained_weights = pre_trained_weights[\"state_dict\"]\n",
     "\n",
+    "# 最後一層是分類層，不需要載入\n",
     "del_key = [key for key in pre_trained_weights.keys() if \"head\" in key]\n",
     "for key in del_key:\n",
     "    del pre_trained_weights[key]\n",
@@ -1675,6 +1773,13 @@
     "\n",
     "print(\"missing_keys:\", missing_keys)\n",
     "print(\"unexpected_keys:\", unexpected_keys)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "載入權重後再次訓練"
    ]
   },
   {
@@ -2015,6 +2120,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "結果明顯更好了(68.33% to 96.72%)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 62,
    "metadata": {},
@@ -2043,14 +2155,6 @@
    ],
    "source": [
     "trainer_load_weights.test()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"ref2\"></a>\n",
-    "<h2 align=center>物件偵測  </h2>\n"
    ]
   }
  ],
