--- a/Weight/util_weight.ipynb
+++ b/Weight/util_weight.ipynb
@@ -25,6 +25,7 @@
     "<li><a href=\"#ref1\">凍結權重</a></li>\n",
     "<li><a href=\"#ref2\">提取權重</a></li>\n",
     "<li><a href=\"#ref3\">保存權重</a></li>\n",
+    "<li><a href=\"#ref4\">完整使用案例</a></li>\n",
     "<hr>\n"
    ]
   },
@@ -33,7 +34,7 @@
    "metadata": {},
    "source": [
     "<a id=\"ref0\"></a>\n",
-    "<h2 align=center>載入權重  </h2>"
+    "# <h2 align=center>載入權重  </h2>"
    ]
   },
   {
@@ -67,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "確認CUDA狀態"
+    "確認CUDA正常執行"
    ]
   },
   {
@@ -92,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3 align=center>方法一：直接載入  </h3>"
+    "# <h3 align=center>方法一：直接載入  </h3>"
    ]
   },
   {
@@ -183,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3 align=center>方法二：Fine-Tune(CNN-based)  </h3>"
+    "# <h3 align=center>方法二：Fine-Tune(CNN-based)  </h3>"
    ]
   },
   {
@@ -497,7 +498,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3 align=center>方法二：Fine-Tune(Transformer-based)  </h3>"
+    "# <h3 align=center>方法二：Fine-Tune(Transformer-based)  </h3>"
    ]
   },
   {
@@ -795,7 +796,7 @@
    "metadata": {},
    "source": [
     "<a id=\"ref1\"></a>\n",
-    "<h2 align=center>凍結權重  </h2>\n"
+    "# <h2 align=center>凍結權重  </h2>\n"
    ]
   },
   {
@@ -1184,7 +1185,7 @@
    "metadata": {},
    "source": [
     "<a id=\"ref2\"></a>\n",
-    "<h2 align=center>提取權重  </h2>\n"
+    "# <h2 align=center>提取權重  </h2>\n"
    ]
   },
   {
@@ -1252,7 +1253,7 @@
    "metadata": {},
    "source": [
     "<a id=\"ref3\"></a>\n",
-    "<h2 align=center>保存權重  </h2>\n"
+    "# <h2 align=center>保存權重  </h2>\n"
    ]
   },
   {
@@ -1374,6 +1375,322 @@
     "# 加載第二層自注意力層的權重\n",
     "model_vit_b_16_load.encoder.layers[1].self_attention.out_proj.weight.data = torch.load(\"vit_attention_layer_1_weights.pth\")\n",
     "print(\"第二層自注意力層的權重已成功加載！\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"ref4\"></a>\n",
+    "# <h2 align=center>完整使用案例  </h2>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cuda')"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torchvision.models import resnet18\n",
+    "\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "device"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "載入預訓練模型(以ResNet18為範例)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\tony1\\anaconda3\\envs\\pytorch\\Lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet18_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet18_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
+   "source": [
+    "main_model = resnet18(weights=True).to(device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "凍結主網路所有權重\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for param in main_model.parameters():\n",
+    "    param.requires_grad = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "設計子網路(以SeNet為範例)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SEBlock(nn.Module):\n",
+    "    def __init__(self, channels, reduction=16):\n",
+    "        super(SEBlock, self).__init__()\n",
+    "        self.avg_pool = nn.AdaptiveAvgPool2d(1)  # 對每個通道進行全局平均池化\n",
+    "        self.fc1 = nn.Linear(channels, channels // reduction, bias=False)  # 第一層全連接層，將通道數減少\n",
+    "        self.fc2 = nn.Linear(channels // reduction, channels, bias=False)  # 第二層全連接層，恢復通道數\n",
+    "        self.sigmoid = nn.Sigmoid()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        batch_size, channels, _, _ = x.size()\n",
+    "        y = self.avg_pool(x).view(batch_size, channels)  # 對每個通道進行池化，將其壓縮為一個標量\n",
+    "        y = torch.relu(self.fc1(y))  # 通過第一層全連接層進行映射\n",
+    "        y = self.fc2(y)  # 通過第二層全連接層映射回原始通道數\n",
+    "        y = self.sigmoid(y).view(batch_size, channels, 1, 1)  # 使用Sigmoid獲得權重\n",
+    "        return x * y  # 根據通道權重進行加權"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "組合主網路與子網路"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CombinedModel(nn.Module):\n",
+    "    def __init__(self, main_model, num_classes=10):\n",
+    "        super(CombinedModel, self).__init__()\n",
+    "        self.main_model = main_model\n",
+    "        \n",
+    "        # 為每個層創建對應的 SEBlock 實例\n",
+    "        self.se_block_layer2 = SEBlock(128)  # 假設 layer2 輸出的通道數為 64\n",
+    "        self.se_block_layer3 = SEBlock(256)  # 假設 layer3 輸出的通道數為 128\n",
+    "        self.se_block_layer4 = SEBlock(512)  # 假設 layer4 輸出的通道數為 256\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # 通過主網路提取特徵\n",
+    "        x = self.main_model.conv1(x)\n",
+    "        x = self.main_model.bn1(x)\n",
+    "        x = self.main_model.relu(x)\n",
+    "        x = self.main_model.maxpool(x)\n",
+    "        x = self.main_model.layer1(x)\n",
+    "        \n",
+    "        # 通過 SE 模塊來增強特徵\n",
+    "        x = self.main_model.layer2(x)\n",
+    "        x = self.se_block_layer2(x)  # SE 模塊處理 layer2 輸出\n",
+    "\n",
+    "        x = self.main_model.layer3(x)\n",
+    "        x = self.se_block_layer3(x)  # SE 模塊處理 layer3 輸出\n",
+    "\n",
+    "        x = self.main_model.layer4(x)\n",
+    "        x = self.se_block_layer4(x)  # SE 模塊處理 layer4 輸出\n",
+    "\n",
+    "        # 展平並分類\n",
+    "        x = self.main_model.avgpool(x)\n",
+    "        x = x.view(x.size(0), -1)  # 展平操作\n",
+    "        x = self.main_model.fc(x)\n",
+    "        return x\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_model = CombinedModel(main_model).to(device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "基本設定"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torchvision\n",
+    "from torch.utils.data import DataLoader, Dataset\n",
+    "from torchvision import transforms\n",
+    "transform = transforms.Compose(\n",
+    "    [\n",
+    "        transforms.Resize(224),\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225]),\n",
+    "    ]\n",
+    ")\n",
+    "optimizer = torch.optim.Adam(combined_model.parameters(), lr=0.001)\n",
+    "criterion = nn.CrossEntropyLoss()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "下載CIFAR-10資料集"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Download CIFAR100 dataset\n",
+    "train_dataset = torchvision.datasets.CIFAR10(\n",
+    "    root=\".\", train=True, download=True, transform=transform\n",
+    ")\n",
+    "test_dataset = torchvision.datasets.CIFAR10(\n",
+    "    root=\".\", train=False, download=True, transform=transform\n",
+    ")\n",
+    "\n",
+    "import random\n",
+    "random.seed(42)\n",
+    "train_size = int(0.8 * len(train_dataset))  # 80%\n",
+    "val_size = len(train_dataset) - train_size  # 20%\n",
+    "train_dataset, val_dataset = torch.utils.data.random_split(\n",
+    "    train_dataset, [train_size, val_size]\n",
+    ")\n",
+    "\n",
+    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=64, shuffle=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "訓練模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for epoch in range(1):\n",
+    "    for inputs, labels in train_loader:\n",
+    "        inputs, labels = inputs.to(device), labels.to(device)\n",
+    "        \n",
+    "        # 前向傳播\n",
+    "        outputs = combined_model(inputs)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        \n",
+    "        # 反向傳播\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "保存與載入模型權重"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 保存權重\n",
+    "torch.save({\n",
+    "    'se_block_layer2': combined_model.se_block_layer2.state_dict(),\n",
+    "    'se_block_layer3': combined_model.se_block_layer3.state_dict(),\n",
+    "    'se_block_layer4': combined_model.se_block_layer4.state_dict()\n",
+    "}, 'se_block.pth')\n",
+    "print(\"子網路的權重已成功保存！\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "子網路的權重已成功加載！\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tony1\\AppData\\Local\\Temp\\ipykernel_11476\\1835502065.py:5: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  checkpoint = torch.load('se_block.pth')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 創建 CombinedModel 實例\n",
+    "combined_model = CombinedModel(main_model)\n",
+    "\n",
+    "# 加載 SEBlock 層的權重\n",
+    "checkpoint = torch.load('se_block.pth')\n",
+    "\n",
+    "# 加載權重到對應的 SEBlock 層\n",
+    "combined_model.se_block_layer2.load_state_dict(checkpoint['se_block_layer2'])\n",
+    "combined_model.se_block_layer3.load_state_dict(checkpoint['se_block_layer3'])\n",
+    "combined_model.se_block_layer4.load_state_dict(checkpoint['se_block_layer4'])\n",
+    "\n",
+    "print(\"子網路的權重已成功加載！\")"
    ]
   }
  ],
