--- a/Exercise/Conv/ConvNeXt.ipynb
+++ b/Exercise/Conv/ConvNeXt.ipynb
@@ -63,7 +63,7 @@
    "source": [
     "#移除DropPath、gamma、scale、init_weight等設定，專注於框架\n",
     "\n",
-    "class _Block(nn.Module):\n",
+    "class Block(nn.Module):\n",
     "\n",
     "    def __init__(self, dim):\n",
     "        super().__init__()\n",
@@ -84,7 +84,7 @@
     "\n",
     "        return x\n",
     "\n",
-    "class _ConvNeXt(nn.Module):\n",
+    "class ConvNeXt(nn.Module):\n",
     "\n",
     "    def __init__(self, in_chans=3, num_classes=1000,\n",
     "                 depths=[3, 3, 9, 3], dims=[96, 192, 384, 768]\n",
@@ -106,7 +106,7 @@
     "        return x\n",
     "\n",
     "#作者提供的LN\n",
-    "class _LayerNorm(nn.Module):\n",
+    "class LayerNorm(nn.Module):\n",
     "    r\"\"\" LayerNorm that supports two data formats: channels_last (default) or channels_first.\n",
     "    The ordering of the dimensions in the inputs. channels_last corresponds to inputs with\n",
     "    shape (batch_size, height, width, channels) while channels_first corresponds to inputs\n",
@@ -137,17 +137,12 @@
    "execution_count": 27
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-17T06:28:05.367572Z",
-     "start_time": "2025-03-17T06:28:05.359741Z"
-    }
-   },
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": 16,
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "#展開正確答案\n",
+    "# 雙擊展開正確答案\n",
+    "\n",
+    "<!--\n",
     "\n",
     "\n",
     "#移除DropPath、gamma、scale、init_weight等設定，專注於框架\n",
@@ -241,9 +236,11 @@
     "            s = (x - u).pow(2).mean(1, keepdim=True)\n",
     "            x = (x - u) / torch.sqrt(s + self.eps)\n",
     "            x = self.weight[:, None, None] * x + self.bias[:, None, None]\n",
-    "            return x"
+    "            return x\n",
+    "\n",
+    "-->"
    ],
-   "id": "2e211507f69f49c1"
+   "id": "456ee4d17601af85"
   }
  ],
  "metadata": {
