--- a/Exercise/Conv/ResNet.ipynb
+++ b/Exercise/Conv/ResNet.ipynb
@@ -48,15 +48,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f51df21dd60c838",
+   "id": "c67b96db85751ae8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class _Bottleneck(nn.Module):\n",
+    "class Bottleneck(nn.Module):\n",
     "    expansion = 4\n",
     "\n",
     "    def __init__(self, in_channels, out_channels, stride=1, downsample=None):\n",
-    "        super(_Bottleneck, self).__init__()\n",
+    "        super().__init__()\n",
     "        #你的答案\n",
     "\n",
     "\n",
@@ -74,19 +74,45 @@
     "\n",
     "\n",
     "\n",
+    "        return\n",
+    "\n",
+    "class ResNet50(nn.Module):\n",
+    "    def __init__(self, num_classes=1000):\n",
+    "        super().__init__()\n",
+    "        #你的答案\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    def make_layer(self, block, out_channels, blocks, stride):\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "        return\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "        return"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d0549e812412531d",
    "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
+    "# 雙擊展開正確答案\n",
+    "\n",
+    "<!--\n",
     "#展開正確答案\n",
-    "\n",
-    "\n",
     "class Bottleneck(nn.Module):\n",
     "    expansion = 4  # 通道數擴展 4 倍\n",
     "\n",
@@ -119,54 +145,7 @@
     "\n",
     "        out += identity\n",
     "        out = self.relu(out)\n",
-    "        return out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c67b96db85751ae8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class _ResNet50(nn.Module):\n",
-    "    def __init__(self, num_classes=1000):\n",
-    "        super(_ResNet50, self).__init__()\n",
-    "        #你的答案\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "    def _make_layer(self, block, out_channels, blocks, stride):\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "        return\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "        return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6ee6e6a28a55cb1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#展開正確答案\n",
-    "\n",
+    "        return out\n",
     "\n",
     "class ResNet50(nn.Module):\n",
     "    def __init__(self, num_classes=1000):\n",
@@ -218,8 +197,11 @@
     "        x = self.avgpool(x)\n",
     "        x = torch.flatten(x, 1)\n",
     "        x = self.fc(x)\n",
-    "        return x"
-   ]
+    "        return x\n",
+    "\n",
+    "-->"
+   ],
+   "id": "acf996b57d8b8545"
   }
  ],
  "metadata": {
