--- a/Exercise/Conv/VGG.ipynb
+++ b/Exercise/Conv/VGG.ipynb
@@ -61,9 +61,9 @@
     "#卷積層統一使用 kernel_size=3, padding=1，池化層使用 kernel_size=2, stride=2\n",
     "#每一個卷積層後接使用ReLU\n",
     "\n",
-    "class _VGG16(nn.Module):\n",
+    "class VGG16(nn.Module):\n",
     "    def __init__(self, num_classes=1000):\n",
-    "        super(_VGG16, self).__init__()\n",
+    "        super().__init__()\n",
     "\n",
     "        # 卷積層部分，使用 nn.Sequential 組織成塊\n",
     "        self.features = nn.Sequential(\n",
@@ -110,12 +110,10 @@
   },
   {
    "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "cell_type": "markdown",
    "source": [
-    "#展開正確答案\n",
-    "\n",
+    "# 雙擊展開正確答案\n",
+    "<!--\n",
     "\n",
     "\n",
     "class VGG16(nn.Module):\n",
@@ -179,9 +177,11 @@
     "        x = self.features(x)\n",
     "        x = x.view(x.size(0), -1)\n",
     "        x = self.classifier(x)\n",
-    "        return x"
+    "        return x\n",
+    "\n",
+    "-->"
    ],
-   "id": "6e8e0329bfc2f90e"
+   "id": "59b148c4c6baeef6"
   }
  ],
  "metadata": {
